crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__can_create_dynamic_attributes.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
let x = 3;
const elems = {"0":document.getElementById("0"),};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __update(dirty, initial) {
  if (initial) elems["0"].setAttribute("class", x + 3);
}
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);

---
<p id="0">Text</p>
