crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__can_write_basic_html_from_fragment_tree_ignoring_mustache_tags.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: "format!(\"{}\\n---\\n{}\", String :: from_utf8(js_out).unwrap(), String ::\n    from_utf8(html_out).unwrap())"
---
const dirty = new Uint8Array(new ArrayBuffer(0));
function replace(node) {
const text = document.createTextNode("");
node.replaceWith(text);
return text;
}

const elems = {};
function __init_ctx() {
return [];
}
const ctx = __init_ctx();
let updating = false;
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);
function __update(dirty, initial) {
}
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
__update(dirty, false);
updating = false;
dirty.fill(0);
});
}

---
<p>Hello</p>
