crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__can_write_basic_js.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
const dirty = new Uint8Array(new ArrayBuffer(1));
const elems = {"2":replace(document.getElementById("2")),"4":document.getElementById("4"),};
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  let __closure1 = () => __schedule_update(0, x = 444);
  let x = 3;
  elems["4"].addEventListener("click", () => __schedule_update(0, x = 444));
  return [x,__closure1];
}
const ctx = __init_ctx();
let updating = false;
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);
function __update(dirty, initial) {
  if (dirty[0] & 1) elems[2].data = ctx[0];
}
__update(null, true);
function __schedule_update(ctx_idx, val) {
  ctx[ctx_idx] = val;
  dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
  if (updating) return;
  updating = true;
  Promise.resolve().then(() => {
    __update(dirty, false);
    updating = false;
    dirty.fill(0);
  });
}

---
<p>Hello, <span id="2"></span>!</p><button id="4">Click Me</button>
