crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__tests__custom_ids_do_not_get_overriden.snap
---
source: crates/decorous-backend/src/prerender/mod.rs
expression: output
---
let x = 3;
const elems = {"custom": document.getElementById("custom"), "custom": document.getElementById("custom"), "2": replace(document.getElementById("2")), }
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
function __init_ctx() {
  let __closure0 = () => console.log(1 + 1);
  elems["custom"].addEventListener("click", () => console.log(1 + 1));
  return [__closure0];
}
const ctx = __init_ctx();
function __update(dirty, initial) {
  if (initial) elems["custom"].setAttribute("class", 1 + 1);
  if (initial) elems[2].data = x;
}
dirty.fill(255);
__update(dirty, true);
dirty.fill(0);

---
<p id="custom">Hello, <span id="2"></span>!</p>
